app/assets/stylesheets/components/_buttons.scss
$lake: #31708E;
$medium-blue: #5085A5;
$sky: #8FC1E3;
$cloud: #F7F9FB;
$charcoal: #3b3a36;

.fancy-button {
  border-radius: 2rem;
  color: #2F2F28;
  border: none;
  outline: none;
  font: {
    size: 1.2rem;
    family: 'Raleway', sans-serif;
  }
  box-shadow: 0.2rem 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 0.2);
  padding: 0.3rem 1rem;
}

.fancy-button:hover {
  cursor: pointer;
}

#record-border {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 3.2rem;
  width: 3.2rem;
  border-radius: 50%;
  background: -webkit-radial-gradient(45px 45px, circle cover, $cloud, $charcoal);
}

.start, .stop {
  border: none;
  outline: none;
}

.start:hover, .stop:hover,
.start:focus, .stop:focus {
  background: -webkit-radial-gradient(45px 45px, circle cover, #a02339, #d81313);
  cursor: pointer;
}

.start {
  background: -webkit-radial-gradient(45px 45px, circle cover, $cloud, black);
  height: 1.5rem;
  width: 1.5rem;
  border-radius: 50%;
}

.stop {
  display: none;
  background: -webkit-radial-gradient(45px 45px, circle cover, #a02339, #d81313);
  height: 1.5rem;
  width: 1.5rem;
  border-radius: 7%;
}

#next-page {
  background-image: image-url('next-page.svg');
  background-repeat: no-repeat;
  background-position: center;
  width: 5em;
  height: 5em;
}

#next-page:hover {
  background-image: image-url('next-page-hover.svg');
  background-size: 4.2em;
}

@media (any-pointer: coarse) {
  #record-border {
    height: 3em;
    width: 3em;
    background: none;
    border: 0.3em solid;
    .start, .stop {
      background: black;
    }
    .start{
      height: 4em;
      width: 4em;
    }
    .stop {
      height: 3em;
      width: 3em;
    }
  }
}

@media (min-height: 500px) and (any-pointer: coarse) {
  #record-border {
    position: absolute;
    bottom: 0;
  }

  #next-page {
    background-size: 3em;
  }
}

